took out second train-test split
Needs to be discussed if this is correct now

--- a/jupyter_notebooks/k_nearest_centroid.ipynb
+++ b/jupyter_notebooks/k_nearest_centroid.ipynb
@@ -133,17 +133,14 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "#splitting data again to evaluate which parameters perform best to test then against actual test data\n",
-    "data_train_tr, data_test_tr, target_train_tr, target_test_tr = get_train_test_split(data_train, target_train)\n",
-    "\n",
     "#metrics that should be used\n",
     "params = ('euclidean', 'minkowski', 'cosine', 'sqeuclidean', 'manhattan')\n",
     "\n",
     "for metric in params:\n",
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
-    "    nearest_centroid.fit(data_train_tr, target_train_tr.values.ravel())\n",
-    "    diabetes_test_prediction = nearest_centroid.predict(data_test_tr)\n",
-    "    print(\"metric: {} -> acc: {}\".format(metric, accuracy_score(target_test_tr, diabetes_test_prediction)))"
+    "    nearest_centroid.fit(data_train, target_train.values.ravel())\n",
+    "    diabetes_test_prediction = nearest_centroid.predict(data_test)\n",
+    "    print(\"metric: {} -> acc: {}\".format(metric, accuracy_score(target_test, diabetes_test_prediction)))"
    ],
    "metadata": {
     "collapsed": false
@@ -163,17 +160,14 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "#splitting data again to evaluate which parameters perform best to test then against actual test data\n",
-    "data_train_os_tr, data_test_os_tr, target_train_os_tr, target_test_os_tr = get_train_test_split(data_train_os, target_train_os)\n",
-    "\n",
     "#metrics that should be used\n",
     "params = ('euclidean', 'minkowski', 'cosine', 'sqeuclidean', 'manhattan')\n",
     "\n",
     "for metric in params:\n",
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
-    "    nearest_centroid.fit(data_train_os_tr, target_train_os_tr.values.ravel())\n",
-    "    diabetes_test_prediction = nearest_centroid.predict(data_test_os_tr)\n",
-    "    print(\"metric: {} -> acc: {}\".format(metric, accuracy_score(target_test_os_tr, diabetes_test_prediction)))"
+    "    nearest_centroid.fit(data_train_os, target_train_os.values.ravel())\n",
+    "    diabetes_test_prediction = nearest_centroid.predict(data_test_os)\n",
+    "    print(\"metric: {} -> acc: {}\".format(metric, accuracy_score(target_test_os, diabetes_test_prediction)))"
    ],
    "metadata": {
     "collapsed": false
@@ -193,17 +187,14 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "#splitting data again to evaluate which parameters perform best to test then against actual test data\n",
-    "data_train_us_tr, data_test_us_tr, target_train_us_tr, target_test_us_tr = get_train_test_split(data_train_us, target_train_us)\n",
-    "\n",
     "#metrics that should be used\n",
     "params = ('euclidean', 'minkowski', 'cosine', 'sqeuclidean', 'manhattan')\n",
     "\n",
     "for metric in params:\n",
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
-    "    nearest_centroid.fit(data_train_us_tr, target_train_us_tr.values.ravel())\n",
-    "    diabetes_test_prediction = nearest_centroid.predict(data_test_us_tr)\n",
-    "    print(\"metric: {} -> acc: {}\".format(metric, accuracy_score(target_test_us_tr, diabetes_test_prediction)))"
+    "    nearest_centroid.fit(data_train_us, target_train_us.values.ravel())\n",
+    "    diabetes_test_prediction = nearest_centroid.predict(data_test_us)\n",
+    "    print(\"metric: {} -> acc: {}\".format(metric, accuracy_score(target_test_us, diabetes_test_prediction)))"
    ],
    "metadata": {
     "collapsed": false
@@ -224,17 +215,14 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "#splitting data again to evaluate which parameters perform best to test then against actual test data\n",
-    "data_train_oh_tr, data_test_oh_tr, target_train_oh_tr, target_test_oh_tr = get_train_test_split(data_train_oh, target_train_oh)\n",
-    "\n",
     "#metrics that should be used\n",
     "params = ('euclidean', 'minkowski', 'cosine', 'sqeuclidean', 'manhattan')\n",
     "\n",
     "for metric in params:\n",
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
-    "    nearest_centroid.fit(data_train_oh_tr, target_train_oh_tr.values.ravel())\n",
-    "    diabetes_test_prediction = nearest_centroid.predict(data_test_oh_tr)\n",
-    "    print(\"metric: {} -> acc: {}\".format(metric, accuracy_score(target_test_oh_tr, diabetes_test_prediction)))"
+    "    nearest_centroid.fit(data_train_oh, target_train_oh.values.ravel())\n",
+    "    diabetes_test_prediction = nearest_centroid.predict(data_test_oh)\n",
+    "    print(\"metric: {} -> acc: {}\".format(metric, accuracy_score(target_test_oh, diabetes_test_prediction)))"
    ],
    "metadata": {
     "collapsed": false
@@ -255,17 +243,14 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "#splitting data again to evaluate which parameters perform best to test then against actual test data\n",
-    "data_train_a_oh_tr, data_test_a_oh_tr, target_train_a_oh_tr, target_test_a_oh_tr = get_train_test_split(data_train_a_oh, target_train_a_oh)\n",
-    "\n",
     "#metrics that should be used\n",
     "params = ('euclidean', 'minkowski', 'cosine', 'sqeuclidean', 'manhattan')\n",
     "\n",
     "for metric in params:\n",
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
-    "    nearest_centroid.fit(data_train_a_oh_tr, target_train_a_oh_tr.values.ravel())\n",
-    "    diabetes_test_prediction = nearest_centroid.predict(data_test_a_oh_tr)\n",
-    "    print(\"metric: {} -> acc: {}\".format(metric, accuracy_score(target_test_a_oh_tr, diabetes_test_prediction)))"
+    "    nearest_centroid.fit(data_train_a_oh, target_train_a_oh.values.ravel())\n",
+    "    diabetes_test_prediction = nearest_centroid.predict(data_test_a_oh)\n",
+    "    print(\"metric: {} -> acc: {}\".format(metric, accuracy_score(target_test_a_oh, diabetes_test_prediction)))"
    ],
    "metadata": {
     "collapsed": false
@@ -285,17 +270,14 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "#splitting data again to evaluate which parameters perform best to test then against actual test data\n",
-    "data_train_oh_os_tr, data_test_oh_os_tr, target_train_oh_os_tr, target_test_oh_os_tr = get_train_test_split(data_train_oh_os, target_train_oh_os)\n",
-    "\n",
     "#metrics that should be used\n",
     "params = ('euclidean', 'minkowski', 'cosine', 'sqeuclidean', 'manhattan')\n",
     "\n",
     "for metric in params:\n",
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
-    "    nearest_centroid.fit(data_train_oh_os_tr, target_train_oh_os_tr.values.ravel())\n",
-    "    diabetes_test_prediction = nearest_centroid.predict(data_test_oh_os_tr)\n",
-    "    print(\"metric: {} -> acc: {}\".format(metric, accuracy_score(target_test_oh_os_tr, diabetes_test_prediction)))"
+    "    nearest_centroid.fit(data_train_oh_os, target_train_oh_os.values.ravel())\n",
+    "    diabetes_test_prediction = nearest_centroid.predict(data_test_oh_os)\n",
+    "    print(\"metric: {} -> acc: {}\".format(metric, accuracy_score(target_test_oh_os, diabetes_test_prediction)))"
    ],
    "metadata": {
     "collapsed": false
@@ -315,17 +297,14 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "#splitting data again to evaluate which parameters perform best to test then against actual test data\n",
-    "data_train_a_oh_os_tr, data_test_a_oh_os_tr, target_train_a_oh_os_tr, target_test_a_oh_os_tr = get_train_test_split(data_train_a_oh_os, target_train_a_oh_os)\n",
-    "\n",
     "#metrics that should be used\n",
     "params = ('euclidean', 'minkowski', 'cosine', 'sqeuclidean', 'manhattan')\n",
     "\n",
     "for metric in params:\n",
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
-    "    nearest_centroid.fit(data_train_a_oh_os_tr, target_train_a_oh_os_tr.values.ravel())\n",
-    "    diabetes_test_prediction = nearest_centroid.predict(data_test_a_oh_os_tr)\n",
-    "    print(\"metric: {} -> acc: {}\".format(metric, accuracy_score(target_test_a_oh_os_tr, diabetes_test_prediction)))"
+    "    nearest_centroid.fit(data_train_a_oh_os, target_train_a_oh_os.values.ravel())\n",
+    "    diabetes_test_prediction = nearest_centroid.predict(data_test_a_oh_os)\n",
+    "    print(\"metric: {} -> acc: {}\".format(metric, accuracy_score(target_test_a_oh_os, diabetes_test_prediction)))"
    ],
    "metadata": {
     "collapsed": false
@@ -345,17 +324,14 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "#splitting data again to evaluate which parameters perform best to test then against actual test data\n",
-    "data_train_oh_us_tr, data_test_oh_us_tr, target_train_oh_us_tr, target_test_oh_us_tr = get_train_test_split(data_train_oh_us, target_train_oh_us)\n",
-    "\n",
     "#metrics that should be used\n",
     "params = ('euclidean', 'minkowski', 'cosine', 'sqeuclidean', 'manhattan')\n",
     "\n",
     "for metric in params:\n",
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
-    "    nearest_centroid.fit(data_train_oh_us_tr, target_train_oh_us_tr.values.ravel())\n",
-    "    diabetes_test_prediction = nearest_centroid.predict(data_test_oh_us_tr)\n",
-    "    print(\"metric: {} -> acc: {}\".format(metric, accuracy_score(target_test_oh_us_tr, diabetes_test_prediction)))"
+    "    nearest_centroid.fit(data_train_oh_us, target_train_oh_us.values.ravel())\n",
+    "    diabetes_test_prediction = nearest_centroid.predict(data_test_oh_us)\n",
+    "    print(\"metric: {} -> acc: {}\".format(metric, accuracy_score(target_test_oh_us, diabetes_test_prediction)))"
    ],
    "metadata": {
     "collapsed": false
@@ -375,17 +351,14 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "#splitting data again to evaluate which parameters perform best to test then against actual test data\n",
-    "data_train_a_oh_us_tr, data_test_a_oh_us_tr, target_train_a_oh_us_tr, target_test_a_oh_us_tr = get_train_test_split(data_train_a_oh_us, target_train_a_oh_us)\n",
-    "\n",
     "#metrics that should be used\n",
     "params = ('euclidean', 'minkowski', 'cosine', 'sqeuclidean', 'manhattan')\n",
     "\n",
     "for metric in params:\n",
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
-    "    nearest_centroid.fit(data_train_a_oh_us_tr, target_train_a_oh_us_tr.values.ravel())\n",
-    "    diabetes_test_prediction = nearest_centroid.predict(data_test_a_oh_us_tr)\n",
-    "    print(\"metric: {} -> acc: {}\".format(metric, accuracy_score(target_test_a_oh_us_tr, diabetes_test_prediction)))"
+    "    nearest_centroid.fit(data_train_a_oh_us, target_train_a_oh_us.values.ravel())\n",
+    "    diabetes_test_prediction = nearest_centroid.predict(data_test_a_oh_us)\n",
+    "    print(\"metric: {} -> acc: {}\".format(metric, accuracy_score(target_test_a_oh_us, diabetes_test_prediction)))"
    ],
    "metadata": {
     "collapsed": false
