--- a/jupyter_notebooks/k_nearest_neighbor.ipynb
+++ b/jupyter_notebooks/k_nearest_neighbor.ipynb
@@ -148,18 +148,15 @@
     }
    ],
    "source": [
-    "#splitting data again to evaluate which parameters perform best to test then against actual test data\n",
-    "data_train_tr, data_test_tr, target_train_tr, target_test_tr = get_train_test_split(data_train, target_train)\n",
-    "\n",
     "#metrics that should be used\n",
     "params = ('euclidean', 'minkowski', 'cosine', 'sqeuclidean', 'manhattan')\n",
     "\n",
     "for n_neighbors in range(5,15):\n",
     "    for metric in params:\n",
     "        knn_estimator = KNeighborsClassifier(n_neighbors=n_neighbors,metric=metric)\n",
-    "        knn_estimator.fit(data_train_tr, target_train_tr.values.ravel())\n",
-    "        diabetes_test_prediction = knn_estimator.predict(data_test_tr)\n",
-    "        print(\"k= {} metric: {} -> acc: {}\".format(n_neighbors, metric, accuracy_score(target_test_tr, diabetes_test_prediction)))"
+    "        knn_estimator.fit(data_train, target_train.values.ravel())\n",
+    "        diabetes_test_prediction = knn_estimator.predict(data_test)\n",
+    "        print(\"k= {} metric: {} -> acc: {}\".format(n_neighbors, metric, accuracy_score(target_test, diabetes_test_prediction)))"
    ],
    "metadata": {
     "collapsed": false
@@ -179,18 +176,15 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "#splitting data again to evaluate which parameters perform best to test then against actual test data\n",
-    "data_train_os_tr, data_test_os_tr, target_train_os_tr, target_test_os_tr = get_train_test_split(data_train_os, target_train_os)\n",
-    "\n",
     "#metrics that should be used\n",
     "params = ('euclidean', 'minkowski', 'cosine', 'sqeuclidean', 'manhattan')\n",
     "\n",
     "for n_neighbors in range(5,15):\n",
     "    for metric in params:\n",
     "        knn_estimator = KNeighborsClassifier(n_neighbors=n_neighbors,metric=metric)\n",
-    "        knn_estimator.fit(data_train_os_tr, target_train_os_tr.values.ravel())\n",
-    "        diabetes_test_prediction = knn_estimator.predict(data_test_os_tr)\n",
-    "        print(\"k= {} metric: {} -> acc: {}\".format(n_neighbors, metric, accuracy_score(target_test_os_tr, diabetes_test_prediction)))"
+    "        knn_estimator.fit(data_train_os, target_train_os.values.ravel())\n",
+    "        diabetes_test_prediction = knn_estimator.predict(data_test_os)\n",
+    "        print(\"k= {} metric: {} -> acc: {}\".format(n_neighbors, metric, accuracy_score(target_test_os, diabetes_test_prediction)))"
    ],
    "metadata": {
     "collapsed": false
@@ -210,18 +204,15 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "#splitting data again to evaluate which parameters perform best to test then against actual test data\n",
-    "data_train_us_tr, data_test_us_tr, target_train_us_tr, target_test_us_tr = get_train_test_split(data_train_us, target_train_us)\n",
-    "\n",
     "#metrics that should be used\n",
     "params = ('euclidean', 'minkowski', 'cosine', 'sqeuclidean', 'manhattan')\n",
     "\n",
     "for n_neighbors in range(5,15):\n",
     "    for metric in params:\n",
     "        knn_estimator = KNeighborsClassifier(n_neighbors=n_neighbors,metric=metric)\n",
-    "        knn_estimator.fit(data_train_us_tr, target_train_us_tr.values.ravel())\n",
-    "        diabetes_test_prediction = knn_estimator.predict(data_test_us_tr)\n",
-    "        print(\"k= {} metric: {} -> acc: {}\".format(n_neighbors, metric, accuracy_score(target_test_us_tr, diabetes_test_prediction)))"
+    "        knn_estimator.fit(data_train_us, target_train_us.values.ravel())\n",
+    "        diabetes_test_prediction = knn_estimator.predict(data_test_us)\n",
+    "        print(\"k= {} metric: {} -> acc: {}\".format(n_neighbors, metric, accuracy_score(target_test_us, diabetes_test_prediction)))"
    ],
    "metadata": {
     "collapsed": false
@@ -242,18 +233,15 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "#splitting data again to evaluate which parameters perform best to test then against actual test data\n",
-    "data_train_oh_tr, data_test_oh_tr, target_train_oh_tr, target_test_oh_tr = get_train_test_split(data_train_oh, target_train_oh)\n",
-    "\n",
     "#metrics that should be used\n",
     "params = ('euclidean', 'minkowski', 'cosine', 'sqeuclidean', 'manhattan')\n",
     "\n",
     "for n_neighbors in range(5,15):\n",
     "    for metric in params:\n",
     "        knn_estimator = KNeighborsClassifier(n_neighbors=n_neighbors,metric=metric)\n",
-    "        knn_estimator.fit(data_train_oh_tr, target_train_oh_tr.values.ravel())\n",
-    "        diabetes_test_prediction = knn_estimator.predict(data_test_oh_tr)\n",
-    "        print(\"k= {} metric: {} -> acc: {}\".format(n_neighbors, metric, accuracy_score(target_test_oh_tr, diabetes_test_prediction)))"
+    "        knn_estimator.fit(data_train_oh, target_train_oh.values.ravel())\n",
+    "        diabetes_test_prediction = knn_estimator.predict(data_test_oh)\n",
+    "        print(\"k= {} metric: {} -> acc: {}\".format(n_neighbors, metric, accuracy_score(target_test_oh, diabetes_test_prediction)))"
    ],
    "metadata": {
     "collapsed": false
@@ -274,18 +262,15 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "#splitting data again to evaluate which parameters perform best to test then against actual test data\n",
-    "data_train_a_oh_tr, data_test_a_oh_tr, target_train_a_oh_tr, target_test_a_oh_tr = get_train_test_split(data_train_a_oh, target_train_a_oh)\n",
-    "\n",
     "#metrics that should be used\n",
     "params = ('euclidean', 'minkowski', 'cosine', 'sqeuclidean', 'manhattan')\n",
     "\n",
     "for n_neighbors in range(5,15):\n",
     "    for metric in params:\n",
     "        knn_estimator = KNeighborsClassifier(n_neighbors=n_neighbors,metric=metric)\n",
-    "        knn_estimator.fit(data_train_a_oh_tr, target_train_a_oh_tr.values.ravel())\n",
-    "        diabetes_test_prediction = knn_estimator.predict(data_test_a_oh_tr)\n",
-    "        print(\"k= {} metric: {} -> acc: {}\".format(n_neighbors, metric, accuracy_score(target_test_a_oh_tr, diabetes_test_prediction)))"
+    "        knn_estimator.fit(data_train_a_oh, target_train_a_oh.values.ravel())\n",
+    "        diabetes_test_prediction = knn_estimator.predict(data_test_a_oh)\n",
+    "        print(\"k= {} metric: {} -> acc: {}\".format(n_neighbors, metric, accuracy_score(target_test_a_oh, diabetes_test_prediction)))"
    ],
    "metadata": {
     "collapsed": false
@@ -305,18 +290,15 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "#splitting data again to evaluate which parameters perform best to test then against actual test data\n",
-    "data_train_oh_os_tr, data_test_oh_os_tr, target_train_oh_os_tr, target_test_oh_os_tr = get_train_test_split(data_train_oh_os, target_train_oh_os)\n",
-    "\n",
     "#metrics that should be used\n",
     "params = ('euclidean', 'minkowski', 'cosine', 'sqeuclidean', 'manhattan')\n",
     "\n",
     "for n_neighbors in range(5,15):\n",
     "    for metric in params:\n",
     "        knn_estimator = KNeighborsClassifier(n_neighbors=n_neighbors,metric=metric)\n",
-    "        knn_estimator.fit(data_train_oh_os_tr, target_train_oh_os_tr.values.ravel())\n",
-    "        diabetes_test_prediction = knn_estimator.predict(data_test_oh_os_tr)\n",
-    "        print(\"k= {} metric: {} -> acc: {}\".format(n_neighbors, metric, accuracy_score(target_test_oh_os_tr, diabetes_test_prediction)))"
+    "        knn_estimator.fit(data_train_oh_os, target_train_oh_os.values.ravel())\n",
+    "        diabetes_test_prediction = knn_estimator.predict(data_test_oh_os)\n",
+    "        print(\"k= {} metric: {} -> acc: {}\".format(n_neighbors, metric, accuracy_score(target_test_oh_os, diabetes_test_prediction)))"
    ],
    "metadata": {
     "collapsed": false
@@ -336,18 +318,15 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "#splitting data again to evaluate which parameters perform best to test then against actual test data\n",
-    "data_train_a_oh_os_tr, data_test_a_oh_os_tr, target_train_a_oh_os_tr, target_test_a_oh_os_tr = get_train_test_split(data_train_a_oh_os, target_train_a_oh_os)\n",
-    "\n",
     "#metrics that should be used\n",
     "params = ('euclidean', 'minkowski', 'cosine', 'sqeuclidean', 'manhattan')\n",
     "\n",
     "for n_neighbors in range(5,15):\n",
     "    for metric in params:\n",
     "        knn_estimator = KNeighborsClassifier(n_neighbors=n_neighbors,metric=metric)\n",
-    "        knn_estimator.fit(data_train_a_oh_os_tr, target_train_a_oh_os_tr.values.ravel())\n",
-    "        diabetes_test_prediction = knn_estimator.predict(data_test_a_oh_os_tr)\n",
-    "        print(\"k= {} metric: {} -> acc: {}\".format(n_neighbors, metric, accuracy_score(target_test_a_oh_os_tr, diabetes_test_prediction)))"
+    "        knn_estimator.fit(data_train_a_oh_os, target_train_a_oh_os.values.ravel())\n",
+    "        diabetes_test_prediction = knn_estimator.predict(data_test_a_oh_os)\n",
+    "        print(\"k= {} metric: {} -> acc: {}\".format(n_neighbors, metric, accuracy_score(target_test_a_oh_os, diabetes_test_prediction)))"
    ],
    "metadata": {
     "collapsed": false
@@ -367,18 +346,15 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "#splitting data again to evaluate which parameters perform best to test then against actual test data\n",
-    "data_train_oh_us_tr, data_test_oh_us_tr, target_train_oh_us_tr, target_test_oh_us_tr = get_train_test_split(data_train_oh_us, target_train_oh_us)\n",
-    "\n",
     "#metrics that should be used\n",
     "params = ('euclidean', 'minkowski', 'cosine', 'sqeuclidean', 'manhattan')\n",
     "\n",
     "for n_neighbors in range(5,15):\n",
     "    for metric in params:\n",
     "        knn_estimator = KNeighborsClassifier(n_neighbors=n_neighbors,metric=metric)\n",
-    "        knn_estimator.fit(data_train_oh_us_tr, target_train_oh_us_tr.values.ravel())\n",
-    "        diabetes_test_prediction = knn_estimator.predict(data_test_oh_us_tr)\n",
-    "        print(\"k= {} metric: {} -> acc: {}\".format(n_neighbors, metric, accuracy_score(target_test_oh_us_tr, diabetes_test_prediction)))"
+    "        knn_estimator.fit(data_train_oh_us, target_train_oh_us.values.ravel())\n",
+    "        diabetes_test_prediction = knn_estimator.predict(data_test_oh_us)\n",
+    "        print(\"k= {} metric: {} -> acc: {}\".format(n_neighbors, metric, accuracy_score(target_test_oh_us, diabetes_test_prediction)))"
    ],
    "metadata": {
     "collapsed": false
@@ -398,18 +374,15 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "#splitting data again to evaluate which parameters perform best to test then against actual test data\n",
-    "data_train_a_oh_us_tr, data_test_a_oh_us_tr, target_train_a_oh_us_tr, target_test_a_oh_us_tr = get_train_test_split(data_train_a_oh_us, target_train_a_oh_us)\n",
-    "\n",
     "#metrics that should be used\n",
     "params = ('euclidean', 'minkowski', 'cosine', 'sqeuclidean', 'manhattan')\n",
     "\n",
     "for n_neighbors in range(5,15):\n",
     "    for metric in params:\n",
     "        knn_estimator = KNeighborsClassifier(n_neighbors=n_neighbors,metric=metric)\n",
-    "        knn_estimator.fit(data_train_a_oh_tr, target_train_a_oh_tr.values.ravel())\n",
-    "        diabetes_test_prediction = knn_estimator.predict(data_test_a_oh_tr)\n",
-    "        print(\"k= {} metric: {} -> acc: {}\".format(n_neighbors, metric, accuracy_score(target_test_a_oh_tr, diabetes_test_prediction)))"
+    "        knn_estimator.fit(data_train_a_oh, target_train_a_oh.values.ravel())\n",
+    "        diabetes_test_prediction = knn_estimator.predict(data_test_a_oh)\n",
+    "        print(\"k= {} metric: {} -> acc: {}\".format(n_neighbors, metric, accuracy_score(target_test_a_oh, diabetes_test_prediction)))"
    ],
    "metadata": {
     "collapsed": false
