added jaccard metric

--- a/jupyter_notebooks/k_nearest_neighbor.ipynb
+++ b/jupyter_notebooks/k_nearest_neighbor.ipynb
@@ -37,9 +37,9 @@
     "\n",
     "In detail, we will vary regarding parameters:<br>\n",
     "\n",
-    "| **Parameter** |                       **range Values**                       |\n",
-    "|:-------------:|:------------------------------------------------------------:|\n",
-    "| metric        |           'euclidean',<br>'cosine',<br>'manhattan'           |\n",
+    "| **Parameter** |                    **range Values**                    |\n",
+    "|:-------------:|:------------------------------------------------------:|\n",
+    "| metric        | 'euclidean',<br>'cosine',<br>'manhattan',<br>'jaccard' |\n",
     "\n",
     "And we will vary for preprocessing:\n",
     "\n",
@@ -124,7 +124,7 @@
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_label_encoded_train_test_split()\n",
     "\n",
     "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan')\n",
+    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
     "\n",
     "for n_neighbors in range(5,16):\n",
     "    for metric in params:\n",
@@ -156,7 +156,7 @@
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_label_encoded_train_test_split_oversampled()\n",
     "\n",
     "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan')\n",
+    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
     "\n",
     "for n_neighbors in range(5,16):\n",
     "    for metric in params:\n",
@@ -188,7 +188,7 @@
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_label_encoded_train_test_split_undersampled()\n",
     "\n",
     "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan')\n",
+    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
     "\n",
     "for n_neighbors in range(5,16):\n",
     "    for metric in params:\n",
@@ -221,7 +221,7 @@
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded()\n",
     "\n",
     "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan')\n",
+    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
     "\n",
     "for n_neighbors in range(5,16):\n",
     "    for metric in params:\n",
@@ -254,7 +254,7 @@
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns()\n",
     "\n",
     "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan')\n",
+    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
     "\n",
     "for n_neighbors in range(5,16):\n",
     "    for metric in params:\n",
@@ -286,7 +286,7 @@
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded_train_test_split_oversampled()\n",
     "\n",
     "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan')\n",
+    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
     "\n",
     "for n_neighbors in range(5,16):\n",
     "    for metric in params:\n",
@@ -318,7 +318,7 @@
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns_train_test_split_oversampled()\n",
     "\n",
     "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan')\n",
+    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
     "\n",
     "for n_neighbors in range(5,16):\n",
     "    for metric in params:\n",
@@ -350,7 +350,7 @@
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded_train_test_split_undersampled()\n",
     "\n",
     "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan')\n",
+    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
     "\n",
     "for n_neighbors in range(5,16):\n",
     "    for metric in params:\n",
@@ -382,7 +382,7 @@
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns_train_test_split_undersampled()\n",
     "\n",
     "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan')\n",
+    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
     "\n",
     "for n_neighbors in range(5,16):\n",
     "    for metric in params:\n",
