--- a/jupyter_notebooks/k_nearest_centroid.ipynb
+++ b/jupyter_notebooks/k_nearest_centroid.ipynb
@@ -50,9 +50,9 @@
     "In detail, we will vary regarding parameters:<br>\n",
     "\n",
     "\n",
-    "| **Parameter** |                       **range Values**                        |\n",
-    "|:-------------:|:-------------------------------------------------------------:|\n",
-    "| metric        |           'euclidean',<br>'cosine',<br>'manhattan'            |\n",
+    "| **Parameter** |                   **range Values**                    |\n",
+    "|:-------------:|:-----------------------------------------------------:|\n",
+    "| metric        | 'euclidean',<br>'cosine',<br>'manhattan',<br>'jaccard' |\n",
     "\n",
     "And we will vary for preprocessing:\n",
     "\n",
@@ -103,7 +103,7 @@
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_label_encoded_train_test_split()\n",
     "\n",
     "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan')\n",
+    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
     "\n",
     "for metric in params:\n",
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
@@ -133,7 +133,7 @@
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_label_encoded_train_test_split_oversampled()\n",
     "\n",
     "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan')\n",
+    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
     "\n",
     "for metric in params:\n",
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
@@ -163,7 +163,7 @@
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_label_encoded_train_test_split_undersampled()\n",
     "\n",
     "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan')\n",
+    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
     "\n",
     "for metric in params:\n",
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
@@ -194,7 +194,7 @@
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded()\n",
     "\n",
     "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan')\n",
+    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
     "\n",
     "for metric in params:\n",
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
@@ -225,7 +225,7 @@
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns()\n",
     "\n",
     "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan')\n",
+    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
     "\n",
     "for metric in params:\n",
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
@@ -255,7 +255,7 @@
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded_train_test_split_oversampled()\n",
     "\n",
     "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan')\n",
+    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
     "\n",
     "for metric in params:\n",
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
@@ -285,7 +285,7 @@
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns_train_test_split_oversampled()\n",
     "\n",
     "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan')\n",
+    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
     "\n",
     "for metric in params:\n",
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
@@ -315,7 +315,7 @@
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded_train_test_split_undersampled()\n",
     "\n",
     "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan')\n",
+    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
     "\n",
     "for metric in params:\n",
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
@@ -345,7 +345,7 @@
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns_train_test_split_undersampled()\n",
     "\n",
     "#metrics that should be used\n",
-    "params = ('euclidean', 'cosine', 'manhattan')\n",
+    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
     "\n",
     "for metric in params:\n",
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
