--- a/jupyter_notebooks/support_vector_machine.ipynb
+++ b/jupyter_notebooks/support_vector_machine.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,9 +494,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy for C = 0.01 and max_iter = 200: 0.8554482878046669\n",
+      "F1-Score for C = 0.01 and max_iter = 200: 0.8035895909451637\n",
+      "\n",
+      "Accuracy for C = 0.01 and max_iter = 500: 0.8554482878046669\n",
+      "F1-Score for C = 0.01 and max_iter = 500: 0.8035895909451637\n",
+      "\n",
+      "Accuracy for C = 0.01 and max_iter = 1000: 0.8554482878046669\n",
+      "F1-Score for C = 0.01 and max_iter = 1000: 0.8035895909451637\n",
+      "\n",
+      "Accuracy for C = 0.01 and max_iter = 1500: 0.8554482878046669\n",
+      "F1-Score for C = 0.01 and max_iter = 1500: 0.8035895909451637\n",
+      "\n",
+      "Accuracy for C = 0.01 and max_iter = 2000: 0.8554482878046669\n",
+      "F1-Score for C = 0.01 and max_iter = 2000: 0.8035895909451637\n",
+      "\n",
+      "Accuracy for C = 0.1 and max_iter = 200: 0.855534871639465\n",
+      "F1-Score for C = 0.1 and max_iter = 200: 0.8039144369378222\n",
+      "\n",
+      "Accuracy for C = 0.1 and max_iter = 500: 0.855534871639465\n",
+      "F1-Score for C = 0.1 and max_iter = 500: 0.8039144369378222\n",
+      "\n",
+      "Accuracy for C = 0.1 and max_iter = 1000: 0.855534871639465\n",
+      "F1-Score for C = 0.1 and max_iter = 1000: 0.8039144369378222\n",
+      "\n",
+      "Accuracy for C = 0.1 and max_iter = 1500: 0.855534871639465\n",
+      "F1-Score for C = 0.1 and max_iter = 1500: 0.8039144369378222\n",
+      "\n",
+      "Accuracy for C = 0.1 and max_iter = 2000: 0.855534871639465\n",
+      "F1-Score for C = 0.1 and max_iter = 2000: 0.8039144369378222\n",
+      "\n",
+      "Accuracy for C = 10 and max_iter = 200: 0.802740378371358\n",
+      "F1-Score for C = 10 and max_iter = 200: 0.8061570830588141\n",
+      "\n",
+      "Accuracy for C = 10 and max_iter = 500: 0.8554049958872678\n",
+      "F1-Score for C = 10 and max_iter = 500: 0.8122677691575606\n",
+      "\n",
+      "Accuracy for C = 10 and max_iter = 1000: 0.8552318282176717\n",
+      "F1-Score for C = 10 and max_iter = 1000: 0.8026834036219596\n",
+      "\n",
+      "Accuracy for C = 10 and max_iter = 1500: 0.8560110827308541\n",
+      "F1-Score for C = 10 and max_iter = 1500: 0.8074803698939504\n",
+      "\n",
+      "Accuracy for C = 10 and max_iter = 2000: 0.8556863933503615\n",
+      "F1-Score for C = 10 and max_iter = 2000: 0.8047353400503288\n",
+      "\n",
+      "Accuracy for C = 100 and max_iter = 200: 0.4087406381228625\n",
+      "F1-Score for C = 100 and max_iter = 200: 0.46341667096786876\n",
+      "\n",
+      "Accuracy for C = 100 and max_iter = 500: 0.8496688168318974\n",
+      "F1-Score for C = 100 and max_iter = 500: 0.8006318010860655\n",
+      "\n",
+      "Accuracy for C = 100 and max_iter = 1000: 0.8414217065673839\n",
+      "F1-Score for C = 100 and max_iter = 1000: 0.8146267001903397\n",
+      "\n",
+      "Accuracy for C = 100 and max_iter = 1500: 0.8511840339408633\n",
+      "F1-Score for C = 100 and max_iter = 1500: 0.7971586978649504\n",
+      "\n",
+      "Accuracy for C = 100 and max_iter = 2000: 0.8452963331745963\n",
+      "F1-Score for C = 100 and max_iter = 2000: 0.8212897501441618\n",
+      "\n",
+      "Accuracy for C = 1000 and max_iter = 200: 0.8521148101649422\n",
+      "F1-Score for C = 1000 and max_iter = 200: 0.7910716698118854\n",
+      "\n",
+      "Accuracy for C = 1000 and max_iter = 500: 0.8056625827957921\n",
+      "F1-Score for C = 1000 and max_iter = 500: 0.8004051382701879\n",
+      "\n",
+      "Accuracy for C = 1000 and max_iter = 1000: 0.8433265509329408\n",
+      "F1-Score for C = 1000 and max_iter = 1000: 0.793667876105759\n",
+      "\n",
+      "Accuracy for C = 1000 and max_iter = 1500: 0.8459024200181826\n",
+      "F1-Score for C = 1000 and max_iter = 1500: 0.8103158413473596\n",
+      "\n",
+      "Accuracy for C = 1000 and max_iter = 2000: 0.8509892203125676\n",
+      "F1-Score for C = 1000 and max_iter = 2000: 0.7889432065487453\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# try different parameter combinations\n",
     "for c in [0.01, 0.1, 10, 100, 1000]:\n",
@@ -505,7 +587,7 @@
     "        svm.fit(data_train,target_train.values.ravel())\n",
     "        val_predictions = svm.predict(data_val)\n",
     "        print('Accuracy for C = {} and max_iter = {}: {}'.format(c, iter, metrics.accuracy_score(target_val, val_predictions)))\n",
-    "        print('F1-Score for C = {} and max_iter = {}: {}'.format(c, iter, metrics.f1_score(target_val, val_predictions)))\n",
+    "        print('F1-Score for C = {} and max_iter = {}: {}'.format(c, iter, metrics.f1_score(target_val, val_predictions, average=\"weighted\")))\n",
     "        print()"
    ]
   },
