change baseline calculation

--- a/jupyter_notebooks/preprocessing.ipynb
+++ b/jupyter_notebooks/preprocessing.ipynb
@@ -2,15 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
     "from preprocessing.preprocessing import *\n",
     "from preprocessing.preprocessing_label_encoding import *\n",
-    "from visualization.general_plots import plot_class_frequencies"
+    "from visualization.general_plots import plot_class_frequencies\n",
+    "\n",
+    "from sklearn import metrics"
    ]
   },
   {
@@ -136,7 +141,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "To determine our baseline for testing we look at the percentage of no (3.0) values in the target, since always predicting no is our baseline to beat."
+    "To determine our baseline for testing we look at accuracy and F1-Score for no (3.0) values in the target, since always predicting no is our baseline to beat."
    ],
    "metadata": {
     "collapsed": false
@@ -144,21 +149,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Baseline = 0.8501774983981852\n"
+      "Baseline (Accuracy) = 0.8501774983981852\n",
+      "Baseline (F1-Score) = 0.7813323634174245\n"
      ]
     }
    ],
    "source": [
-    "target_squeezed = target.squeeze()\n",
-    "class_dist = target_squeezed.value_counts()\n",
-    "baseline = class_dist[3.0] / len(target)\n",
-    "print(\"Baseline = {}\".format(baseline))"
+    "baseline_prediction = pd.DataFrame(np.full((len(target), 1), 3.0))\n",
+    "\n",
+    "print('Baseline (Accuracy) = {}'.format(metrics.accuracy_score(target, baseline_prediction)))\n",
+    "print('Baseline (F1-Score) = {}'.format(metrics.f1_score(target, baseline_prediction, average=\"weighted\")))"
    ],
    "metadata": {
     "collapsed": false
