updated notebooks with insights from Q&A

--- a/jupyter_notebooks/k_nearest_centroid.ipynb
+++ b/jupyter_notebooks/k_nearest_centroid.ipynb
@@ -38,7 +38,13 @@
     "from sklearn.metrics import *\n",
     "\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "#used to store the results and compare at the end\n",
+    "approach_list = []\n",
+    "acc_list = []\n",
+    "cr_list = []\n",
+    "f1_list = []"
    ]
   },
   {
@@ -54,6 +60,7 @@
     "|:-------------:|:-----------------------------------------------------:|\n",
     "| metric        | 'euclidean',<br>'cosine',<br>'manhattan',<br>'jaccard' |\n",
     "\n",
+    "\n",
     "And we will vary for preprocessing:\n",
     "\n",
     "|              **Preprocessing**              |                           **Description**                           |\n",
@@ -67,6 +74,35 @@
     "| One Hot Encoding (2) <br>+<br>Oversampling  | One hot encoding for all columns including yes/no and oversampling  |\n",
     "| One Hot Encoding (1)<br>+<br>Undersampling  |  One hot encoding for all columns except yes/no and undersampling   |\n",
     "| One Hot Encoding (2) <br>+<br>Undersampling | One hot encoding for all columns including yes/no and undersampling |"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The below defined function is used to store all the accuracy and f1-scores for a better comparison and evaluation capability at the end. It also returns the Accuracy score and F1-Score to see the performance directly under each method.\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def evaluation(target_validation, diabetes_test_prediction, metric, preproccessing):\n",
+    "    approach = \"preprocessing: {} metric: {}\".format(preproccessing, metric)\n",
+    "    approach_list.append(approach)\n",
+    "    acc = accuracy_score(target_validation, diabetes_test_prediction)\n",
+    "    acc_list.append(acc)\n",
+    "    cr = classification_report(target_validation, diabetes_test_prediction)\n",
+    "    cr_list.append(cr)\n",
+    "    f1 = f1_score(target_validation, diabetes_test_prediction)\n",
+    "    f1_list.append(f1)\n",
+    "    return \"{}:\\n acc = {}\\n f1-score = {}\".format(approach, acc, f1)"
    ],
    "metadata": {
     "collapsed": false
@@ -99,6 +135,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "preprocessing = \"Label Encoding\"\n",
+    "\n",
     "#load data\n",
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_label_encoded_train_test_split()\n",
     "\n",
@@ -109,7 +147,7 @@
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
     "    nearest_centroid.fit(data_train, target_train.values.ravel())\n",
     "    diabetes_test_prediction = nearest_centroid.predict(data_validation)\n",
-    "    print(\"metric: {} -> acc: {}\".format(metric, accuracy_score(target_validation, diabetes_test_prediction)))"
+    "    print(evaluation(target_validation, diabetes_test_prediction, metric, preprocessing))"
    ],
    "metadata": {
     "collapsed": false
@@ -129,6 +167,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "preprocessing = \"Label Encoding + Oversampling\"\n",
+    "\n",
     "#load data\n",
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_label_encoded_train_test_split_oversampled()\n",
     "\n",
@@ -139,7 +179,7 @@
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
     "    nearest_centroid.fit(data_train, target_train.values.ravel())\n",
     "    diabetes_test_prediction = nearest_centroid.predict(data_validation)\n",
-    "    print(\"metric: {} -> acc: {}\".format(metric, accuracy_score(target_validation, diabetes_test_prediction)))"
+    "    print(evaluation(target_validation, diabetes_test_prediction, metric, preprocessing))"
    ],
    "metadata": {
     "collapsed": false
@@ -159,6 +199,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "preprocessing = \"Label Encoding + Undersampling\"\n",
+    "\n",
     "#load data\n",
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_label_encoded_train_test_split_undersampled()\n",
     "\n",
@@ -169,7 +211,7 @@
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
     "    nearest_centroid.fit(data_train, target_train.values.ravel())\n",
     "    diabetes_test_prediction = nearest_centroid.predict(data_validation)\n",
-    "    print(\"metric: {} -> acc: {}\".format(metric, accuracy_score(target_validation, diabetes_test_prediction)))"
+    "    print(evaluation(target_validation, diabetes_test_prediction, metric, preprocessing))"
    ],
    "metadata": {
     "collapsed": false
@@ -190,6 +232,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "preprocessing = \"One Hot Encoding (1)\"\n",
+    "\n",
     "#load data\n",
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded()\n",
     "\n",
@@ -200,7 +244,7 @@
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
     "    nearest_centroid.fit(data_train, target_train.values.ravel())\n",
     "    diabetes_test_prediction = nearest_centroid.predict(data_validation)\n",
-    "    print(\"metric: {} -> acc: {}\".format(metric, accuracy_score(target_validation, diabetes_test_prediction)))"
+    "    print(evaluation(target_validation, diabetes_test_prediction, metric, preprocessing))"
    ],
    "metadata": {
     "collapsed": false
@@ -221,6 +265,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "preprocessing = \"One Hot Encoding (2)\"\n",
+    "\n",
     "#load data\n",
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns()\n",
     "\n",
@@ -231,7 +277,7 @@
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
     "    nearest_centroid.fit(data_train, target_train.values.ravel())\n",
     "    diabetes_test_prediction = nearest_centroid.predict(data_validation)\n",
-    "    print(\"metric: {} -> acc: {}\".format(metric, accuracy_score(target_validation, diabetes_test_prediction)))"
+    "    print(evaluation(target_validation, diabetes_test_prediction, metric, preprocessing))"
    ],
    "metadata": {
     "collapsed": false
@@ -251,6 +297,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "preprocessing = \"One Hot Encoding (1) + Oversampling\"\n",
+    "\n",
     "#load data\n",
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded_train_test_split_oversampled()\n",
     "\n",
@@ -261,7 +309,7 @@
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
     "    nearest_centroid.fit(data_train, target_train.values.ravel())\n",
     "    diabetes_test_prediction = nearest_centroid.predict(data_validation)\n",
-    "    print(\"metric: {} -> acc: {}\".format(metric, accuracy_score(target_validation, diabetes_test_prediction)))"
+    "    print(evaluation(target_validation, diabetes_test_prediction, metric, preprocessing))"
    ],
    "metadata": {
     "collapsed": false
@@ -281,6 +329,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "preprocessing = \"One Hot Encoding (2) + Oversampling\"\n",
+    "\n",
     "#load data\n",
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns_train_test_split_oversampled()\n",
     "\n",
@@ -291,7 +341,7 @@
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
     "    nearest_centroid.fit(data_train, target_train.values.ravel())\n",
     "    diabetes_test_prediction = nearest_centroid.predict(data_validation)\n",
-    "    print(\"metric: {} -> acc: {}\".format(metric, accuracy_score(target_validation, diabetes_test_prediction)))"
+    "    print(evaluation(target_validation, diabetes_test_prediction, metric, preprocessing))"
    ],
    "metadata": {
     "collapsed": false
@@ -311,6 +361,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "preprocessing = \"One Hot Encoding (1) + Undersampling\"\n",
+    "\n",
     "#load data\n",
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded_train_test_split_undersampled()\n",
     "\n",
@@ -321,7 +373,7 @@
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
     "    nearest_centroid.fit(data_train, target_train.values.ravel())\n",
     "    diabetes_test_prediction = nearest_centroid.predict(data_validation)\n",
-    "    print(\"metric: {} -> acc: {}\".format(metric, accuracy_score(target_validation, diabetes_test_prediction)))"
+    "    print(evaluation(target_validation, diabetes_test_prediction, metric, preprocessing))"
    ],
    "metadata": {
     "collapsed": false
@@ -341,6 +393,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "preprocessing = \"One Hot Encoding (2) + Undersampling\"\n",
+    "\n",
     "#load data\n",
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns_train_test_split_undersampled()\n",
     "\n",
@@ -351,7 +405,7 @@
     "    nearest_centroid = NearestCentroid(metric=metric)\n",
     "    nearest_centroid.fit(data_train, target_train.values.ravel())\n",
     "    diabetes_test_prediction = nearest_centroid.predict(data_validation)\n",
-    "    print(\"metric: {} -> acc: {}\".format(metric, accuracy_score(target_validation, diabetes_test_prediction)))"
+    "    print(evaluation(target_validation, diabetes_test_prediction, metric, preprocessing))"
    ],
    "metadata": {
     "collapsed": false
@@ -360,8 +414,58 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Best Approach\n",
-    "tbd\n"
+    "# Evaluation of best approach\n",
+    "We use the following loop to print all F1- and accuracy-scores and thereby also analyze which approach performed best."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "highest_acc = [0.0, None, None]\n",
+    "highest_f1 = [0.0, None, None]\n",
+    "\n",
+    "for i in range(0, len(approach_list)):\n",
+    "    print(\"Nr.{}) {}\".format(i, approach_list[i]))\n",
+    "    print (\"Weighted F1-Score = {}\".format(f1_list[i]))\n",
+    "    print (\"Accuracy-Score = {}\\n\".format(acc_list[i]))\n",
+    "    if highest_f1[0] < float(f1_list[i]):\n",
+    "        highest_f1[0] = f1_list[i]\n",
+    "        highest_f1[1] = i\n",
+    "        highest_f1[2] = approach_list[i]\n",
+    "    if highest_acc[0] < float(acc_list[i]):\n",
+    "        highest_acc[0] = acc_list[i]\n",
+    "        highest_acc[1] = i\n",
+    "        highest_acc[2] = approach_list[i]\n",
+    "\n",
+    "print(\"--------- Best Approaches ---------\")\n",
+    "print(\"Best Approach regarding F1-Score:\\nNr.{}) {} with f1-score = {}\\n\".format(highest_f1[1], highest_f1[2], highest_f1[0]))\n",
+    "print(\"Best Approach regarding Accuracy:\\nNr.{}) {} with acc = {}\".format(highest_acc[1], highest_acc[2], highest_acc[0]))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "We can see that approach _tbd_ with k = _tbd_ and metric = _tbd_ performed best.\n",
+    "We test this approach now finally against the test data that we separated at the beginning:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [],
+   "source": [
+    "#tbd"
    ],
    "metadata": {
     "collapsed": false
