--- a/jupyter_notebooks/support_vector_machine.ipynb
+++ b/jupyter_notebooks/support_vector_machine.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "### Introduction\n",
-    "This Notebook implements a support vector machine classifier and combines different encoding and balancing approaches, aiming to identify the combination on which the SVM-classifier performes best. In addition, a parameter optimization is conducted. The best performing model is then tested by means of a held out test set."
+    "This Notebook implements a support vector machine classifier and combines different encoding and balancing approaches, aiming to identify the combination on which the SVM-classifier performes best regarding the F1-Score. In addition, a parameter optimization is conducted. The best performing model is then tested by means of a held out test set."
    ]
   },
   {
@@ -49,7 +49,7 @@
     "    cm_list.append(cm)\n",
     "    cr = metrics.classification_report(target_val, val_predictions)\n",
     "    cr_list.append(cr)\n",
-    "    f1 = metrics.f1_score(target_val, val_predictions, average=\"weighted\")\n",
+    "    f1 = metrics.f1_score(target_val, val_predictions)\n",
     "    f1_list.append(f1)\n",
     "    return \"Accuracy of {}: {} \\nF1-Score of {}: {}\".format(approach, acc, approach, f1), plot_confusion_matrix(cm, target_val.Diabetes.unique().tolist())"
    ]
@@ -66,7 +66,7 @@
     "\n",
     "Due to a considerable class imbalance (refer to preprocessing.ipynb), each encoding approach is additionaly available with oversampling or undersampling.\n",
     "\n",
-    "In the following, all three encoding approaches combined with no sampling and undersampling will be used to train and val a LinearSVC classifier by means of a train/val split provided by the respective preprocessing. The target dataset was not one hot encoded for this experiment. In order to maintain a feasible computational effort in regards to the available environment, the **max_iter** parameter of the LinearSVC was set to 500.\n",
+    "In the following, all three encoding approaches combined with no sampling and undersampling will be used to train and val a LinearSVC classifier by means of a train/val split provided by the respective preprocessing. The target dataset was not one hot encoded for this experiment. In order to maintain a feasible computational effort in regards to the available environment, the **max_iter** parameter of the LinearSVC was set to 500 and the **C** parameter was left on the default value 1.0 for the encoding selection. \n",
     "\n"
    ]
   },
@@ -166,6 +166,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 1.3 Label Encoding + balanced class weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#load data\n",
+    "data_train, data_val, target_train, target_val = get_preprocessed_brfss_dataset_label_encoded_train_test_split()\n",
+    "\n",
+    "#create and train SVM, then predict\n",
+    "svm = LinearSVC(max_iter=500, class_weight='balanced')\n",
+    "svm.fit(data_train, target_train.values.ravel())\n",
+    "val_predictions = svm.predict(data_val)\n",
+    "\n",
+    "#evaluate\n",
+    "print(evaluation(target_val, val_predictions, \"Label Encoding - balanced class weights\")[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 2.1 One Hot Encoding (Simple) + no sampling"
    ]
   },
@@ -258,6 +283,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 2.3 One Hot Encoding (Simple) + balanced class weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#load data\n",
+    "data_train, data_val, target_train, target_val = get_preprocessed_brfss_dataset_one_hot_encoded_train_test_split()\n",
+    "\n",
+    "#create and train SVM, then predict\n",
+    "svm = LinearSVC(max_iter=500, class_weight='balanced')\n",
+    "svm.fit(data_train, target_train.values.ravel())\n",
+    "val_predictions = svm.predict(data_val)\n",
+    "\n",
+    "#evaluate\n",
+    "print(evaluation(target_val, val_predictions, \"One Hot Encoding - Simple - balanced class weights\")[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 3.1 One Hot Encoding (All) + no sampling"
    ]
   },
@@ -344,6 +394,31 @@
     "\n",
     "#evaluate\n",
     "print(evaluation(target_val, val_predictions, \"One Hot Encoding - All - Undersampled\")[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.3 One Hot Encoding (All) + balanced class weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#load data\n",
+    "data_train, data_val, target_train, target_val = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns_train_test_split()\n",
+    "\n",
+    "#create and train SVM, then predict\n",
+    "svm = LinearSVC(max_iter=500, class_weights='balanced')\n",
+    "svm.fit(data_train, target_train.values.ravel())\n",
+    "val_predictions = svm.predict(data_val)\n",
+    "\n",
+    "#evaluate\n",
+    "print(evaluation(target_val, val_predictions, \"One Hot Encoding - All - balanced class weights\")[0])"
    ]
   },
   {
@@ -451,7 +526,7 @@
    ],
    "source": [
     "for approach in approach_list:\n",
-    "    print (\"Weighted F1-Score - {}: {}\".format(approach, f1_list[approach_list.index(approach)]))\n",
+    "    print (\"F1-Score - {}: {}\".format(approach, f1_list[approach_list.index(approach)]))\n",
     "    print (\"Accuracy-Score - {}: {}\".format(approach, acc_list[approach_list.index(approach)]))\n",
     "    print(cr_list[approach_list.index(approach)])\n",
     "    print()"
@@ -587,7 +662,7 @@
     "        svm.fit(data_train,target_train.values.ravel())\n",
     "        val_predictions = svm.predict(data_val)\n",
     "        print('Accuracy for C = {} and max_iter = {}: {}'.format(c, iter, metrics.accuracy_score(target_val, val_predictions)))\n",
-    "        print('F1-Score for C = {} and max_iter = {}: {}'.format(c, iter, metrics.f1_score(target_val, val_predictions, average=\"weighted\")))\n",
+    "        print('F1-Score for C = {} and max_iter = {}: {}'.format(c, iter, metrics.f1_score(target_val, val_predictions)))\n",
     "        print()"
    ]
   },
@@ -595,7 +670,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Of the 25 parameter combinations tested, the LinearSVC achieves the best accuracy of **TODO** with **TODO**. Focussing on the F1-Score, **TODO**"
+    "Of the 25 parameter combinations tested, the parameters **C = 100 and max_iter = 2000** achieve the best F1-Score of **0.8213**.\n",
+    "The LinearSVC achieves the best accuracy for **C = 10 and max_iter = 1500: 85.60%**.\n",
+    "However, this is only a  small improvement in comparison to the most simple model (C = 0.01 and max_iter = 200, F1-Score: **0.8035**). Hence, following the principle of parsimony (Occam's razor), one might proceed with the simpler model.\n",
+    "Nevertheless, in our case, the improved performance justifies the selection of the more sophisticated model.\n",
+    "\n"
    ]
   },
   {
@@ -611,7 +690,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#todo"
+    "# load data with test data\n",
+    "data_train, data_val, data_test, target_train, target_val, target_test = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns_train_test_split(true)\n",
+    "\n",
+    "#svm = LinearSVC(C=c, max_iter=iter)\n",
+    "svm.fit(data_train,target_train.values.ravel())\n",
+    "test_predictions = svm.predict(data_test)\n",
+    "\n",
+    "#evaluate\n",
+    "#print(evaluation(target_test, test_predictions, \"Final Model: One Hot Encoding - All - No Sampling - C = & max_iter =\")[0])"
    ]
   }
  ],
