switch to F2-Score

--- a/jupyter_notebooks/support_vector_machine.ipynb
+++ b/jupyter_notebooks/support_vector_machine.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "### Introduction\n",
-    "This Notebook implements a support vector machine classifier and combines different encoding and balancing approaches, aiming to identify the combination on which the SVM-classifier performes best regarding the F1-Score. In addition, a parameter optimization is conducted. The best performing model is then tested by means of a held out test set."
+    "This Notebook implements a support vector machine classifier and combines different encoding and balancing approaches, aiming to identify the combination on which the SVM-classifier performes best regarding the F2-Score. In addition, a parameter optimization is conducted. The best performing model is then tested by means of a held out test set."
    ]
   },
   {
@@ -31,7 +31,7 @@
     "acc_list = []\n",
     "cm_list = []\n",
     "cr_list = []\n",
-    "f1_list = []"
+    "f2_list = []"
    ]
   },
   {
@@ -49,9 +49,9 @@
     "    cm_list.append(cm)\n",
     "    cr = metrics.classification_report(target_val, val_predictions)\n",
     "    cr_list.append(cr)\n",
-    "    f1 = metrics.f1_score(target_val, val_predictions)\n",
-    "    f1_list.append(f1)\n",
-    "    return \"Accuracy of {}: {} \\nF1-Score of {}: {}\".format(approach, acc, approach, f1), plot_confusion_matrix(cm, target_val.Diabetes.unique().tolist())"
+    "    f2 = metrics.fbeta_score(target_val, val_predictions, beta=2)\n",
+    "    f2_list.append(f2)\n",
+    "    return \"Accuracy of {}: {} \\nF2-Score of {}: {}\".format(approach, acc, approach, f2), plot_confusion_matrix(cm, target_val.Diabetes.unique().tolist())"
    ]
   },
   {
@@ -526,7 +526,7 @@
    ],
    "source": [
     "for approach in approach_list:\n",
-    "    print (\"F1-Score - {}: {}\".format(approach, f1_list[approach_list.index(approach)]))\n",
+    "    print (\"F2-Score - {}: {}\".format(approach, f2_list[approach_list.index(approach)]))\n",
     "    print (\"Accuracy-Score - {}: {}\".format(approach, acc_list[approach_list.index(approach)]))\n",
     "    print(cr_list[approach_list.index(approach)])\n",
     "    print()"
@@ -662,7 +662,7 @@
     "        svm.fit(data_train,target_train.values.ravel())\n",
     "        val_predictions = svm.predict(data_val)\n",
     "        print('Accuracy for C = {} and max_iter = {}: {}'.format(c, iter, metrics.accuracy_score(target_val, val_predictions)))\n",
-    "        print('F1-Score for C = {} and max_iter = {}: {}'.format(c, iter, metrics.f1_score(target_val, val_predictions)))\n",
+    "        print('F2-Score for C = {} and max_iter = {}: {}'.format(c, iter, metrics.fbeta_score(target_val, val_predictions, beta=2)))\n",
     "        print()"
    ]
   },
@@ -670,10 +670,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Of the 25 parameter combinations tested, the parameters **C = 100 and max_iter = 2000** achieve the best F1-Score of **0.8213**.\n",
-    "The LinearSVC achieves the best accuracy for **C = 10 and max_iter = 1500: 85.60%**.\n",
-    "However, this is only a  small improvement in comparison to the most simple model (C = 0.01 and max_iter = 200, F1-Score: **0.8035**). Hence, following the principle of parsimony (Occam's razor), one might proceed with the simpler model.\n",
-    "Nevertheless, in our case, the improved performance justifies the selection of the more sophisticated model.\n",
+    "Of the 25 parameter combinations tested, the parameters **C = XX and max_iter = XX** achieve the best F2-Score of **XXX**.\n",
+    "The LinearSVC achieves the best accuracy for **C = XX and max_iter = XXXX : XXX%**.\n",
+    "However, this is only a  small improvement in comparison to the most simple model (C = 0.01 and max_iter = 200, F2-Score: **XXX**). Hence, following the principle of parsimony (Occam's razor), one might proceed with the simpler model.\n",
+    "Nevertheless, in our case, we propose that the improved performance justifies the selection of the more sophisticated model.\n",
     "\n"
    ]
   },
@@ -691,7 +691,7 @@
    "outputs": [],
    "source": [
     "# load data with test data\n",
-    "data_train, data_val, data_test, target_train, target_val, target_test = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns_train_test_split(true)\n",
+    "data_train, data_val, data_test, target_train, target_val, target_test = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns_train_test_split(include_test_data=True)\n",
     "\n",
     "#svm = LinearSVC(C=c, max_iter=iter)\n",
     "svm.fit(data_train,target_train.values.ravel())\n",
