--- a/jupyter_notebooks/k_nearest_neighbor.ipynb
+++ b/jupyter_notebooks/k_nearest_neighbor.ipynb
@@ -38,7 +38,7 @@
     "approach_list = []\n",
     "acc_list = []\n",
     "cr_list = []\n",
-    "f1_list = []"
+    "f2_list = []"
    ],
    "metadata": {
     "collapsed": false
@@ -48,7 +48,7 @@
    "cell_type": "markdown",
    "source": [
     "# Hyperparameter tuning and preprocessing\n",
-    "We will evaluate different parameters for the classifier (hyperparameter tuning) as well as different preprocessing steps based on the accuracy and F1-Score.\n",
+    "We will evaluate different parameters for the classifier (hyperparameter tuning) as well as different preprocessing steps based on the accuracy and F2-Score.\n",
     "\n",
     "In detail, we will vary regarding parameters:<br>\n",
     "\n",
@@ -79,7 +79,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The below defined function is used to store all the accuracy and f1-scores for a better comparison and evaluation capability at the end. It also returns the Accuracy score and F1-Score to see the performance directly under each method."
+    "The below defined function is used to store all the accuracy and F2-scores for a better comparison and evaluation capability at the end. It also returns the Accuracy score and F2-Score to see the performance directly under each method."
    ],
    "metadata": {
     "collapsed": false
@@ -97,9 +97,9 @@
     "    acc_list.append(acc)\n",
     "    cr = classification_report(target_validation, diabetes_test_prediction)\n",
     "    cr_list.append(cr)\n",
-    "    f1 = f1_score(target_validation, diabetes_test_prediction)\n",
-    "    f1_list.append(f1)\n",
-    "    return \"{}\\n acc = {}\\n f1-score = {}\".format(approach, acc, f1)"
+    "    f2 = fbeta_score(target_validation, diabetes_test_prediction, 2)\n",
+    "    f2_list.append(f2)\n",
+    "    return \"{}\\n acc = {}\\n f2-score = {}\".format(approach, acc, f2)"
    ],
    "metadata": {
     "collapsed": false
@@ -108,7 +108,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "We start with applying a K-nearest neighbor classifier to the train data and test against the validation data on how it performs by using the accuracy and f1 score.\n",
+    "We start with applying a K-nearest neighbor classifier to the train data and test against the validation data on how it performs by using the accuracy and F2-score.\n",
     "\n",
     "We will do so for each combination that is listed above by using two for loops. The following estimators are structured by the different style of preprocessing.\n",
     "\n",
@@ -440,7 +440,7 @@
    "cell_type": "markdown",
    "source": [
     "# Evaluation of best approach\n",
-    "We use the following loop to print all F1- and accuracy-scores and thereby also analyze which approach performed best."
+    "We use the following loop to print all F2- and accuracy-scores and thereby also analyze which approach performed best."
    ],
    "metadata": {
     "collapsed": false
@@ -481,23 +481,23 @@
    ],
    "source": [
     "highest_acc = [0.0, None, None]\n",
-    "highest_f1 = [0.0, None, None]\n",
+    "highest_f2 = [0.0, None, None]\n",
     "\n",
     "for i in range(0, len(approach_list)):\n",
     "    print(\"Nr.{}) {}\".format(i, approach_list[i]))\n",
-    "    print (\"Weighted F1-Score = {}\".format(f1_list[i]))\n",
+    "    print (\"Weighted F2-Score = {}\".format(f2_list[i]))\n",
     "    print (\"Accuracy-Score = {}\\n\".format(acc_list[i]))\n",
-    "    if highest_f1[0] < float(f1_list[i]):\n",
-    "        highest_f1[0] = f1_list[i]\n",
-    "        highest_f1[1] = i\n",
-    "        highest_f1[2] = approach_list[i]\n",
+    "    if highest_f2[0] < float(f2_list[i]):\n",
+    "        highest_f2[0] = f2_list[i]\n",
+    "        highest_f2[1] = i\n",
+    "        highest_f2[2] = approach_list[i]\n",
     "    if highest_acc[0] < float(acc_list[i]):\n",
     "        highest_acc[0] = acc_list[i]\n",
     "        highest_acc[1] = i\n",
     "        highest_acc[2] = approach_list[i]\n",
     "\n",
     "print(\"--------- Best Approaches ---------\")\n",
-    "print(\"Best Approach regarding F1-Score:\\nNr.{}) {} with f1-score = {}\\n\".format(highest_f1[1], highest_f1[2], highest_f1[0]))\n",
+    "print(\"Best Approach regarding F2-Score:\\nNr.{}) {} with f2-score = {}\\n\".format(highest_f2[1], highest_f2[2], highest_f2[0]))\n",
     "print(\"Best Approach regarding Accuracy:\\nNr.{}) {} with acc = {}\".format(highest_acc[1], highest_acc[2], highest_acc[0]))"
    ],
    "metadata": {
